x.y.z
=====

Release date:

New features:

* Add German translations

Bug fixes:

Other:

3.2.0
=====

Release date:

Sat, 15 Jan 2022 20:42:13 +0200

New features:

* Fix GitHub Issue #181: Copy should copy also edges within the group
  - When copying (and pasting) nodes, also the edges within the copy group are now copied

Bug fixes:

* Fix GitHub Issue #195: Decrease size of "About" dialog

Other:

* Updated Dutch & Italian translations

3.1.0
=====

Release date:

Fri, 24 Dec 2021 12:47:41 +0200

New features:

* Option to automatically snap existing nodes to grid

* Option for dashed lines in the edge context menu

Bug fixes:

* Fix GitHub Issue #186: Icon is installed in /usr/share/icons/hicolor/64x64 but actual size is 256x256

* Fix GitHub Issue #188: Double-clicking on a large node zooms in incorrectly

* Fix GitHub Issue #189: Export to PNG breaks zoom out

* Fix GitHub Issue #190: Export to PNG works only once
  - Fixes the same issue with SVG export, too

Other:

* Simplify edge context menu

3.0.0
=====

Release date:

Sun, 21 Nov 2021 22:43:30 +0200

New features:

* Fix GitHub Issue #36: Double-click to zoom into a node
* Fix GitHub Issue #138: Make it possible to change the font
* Fix GitHub Issue #180: Make edge text disappear if it doesn't fit between nodes

Bug fixes:

* Fix auto save not triggering immediately on file operations

2.8.0
=====

Release date:

Mon, 25 Oct 2021 21:11:27 +0300

New features:

* Fix GitHub Issue #173: Being able to paste and create a node right-away
  - Pasting text to Heimer will create a new node with that text
  - Pasting image data e.g. from Gimp to Heimer will create a new node with that image

* Highlight text found by search
  - Not perfect as only the first occurrence is being matched

Bug fixes:

* Fix GitHub Issue #175: Windows installer doesn't add shortcuts

* Fix image save when original image is missing

* Write images with same id only once

Other:
